--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,8 +1,8 @@
 @media screen and (min-width: 1200px) {
 .container{
-width: 1160px;    
+width: 1158px;    
 } 
-/* .header-container{
+.header-container{
     width: 100%;
     height: 76px;
 }
@@ -10,11 +10,9 @@ width: 1160px;
     margin-left: 76px;
 }
 .contact-list{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-} */
+    flex-direction: row;
+    gap: 40px;
+} 
 /* ===== Hero ===== */
 .hero{
     max-width: 1440px;
