--- a/css/mobile.css
+++ b/css/mobile.css
@@ -22,7 +22,7 @@ margin-right: auto;
         position: fixed;
         width: 100%;
         height: 100%;
-        max-width: 796px;
+        height: 796px;
         top: 0;
         left: 0;
         z-index: 100;
@@ -41,6 +41,7 @@ margin-right: auto;
     
     }
     .mobile-menu-container{
+        height: 100%;
         position: relative;
         padding-top: 80px;
         padding-bottom: 40px;
@@ -59,8 +60,8 @@ margin-right: auto;
     
     .mobile-menu-close-btn{
         position: absolute;
-        right: 40px;
-        top: 40px;
+        right: 30px;
+        top: 30px;
         background-color: transparent; 
         border: none;  
         padding: 0;
@@ -68,6 +69,11 @@ margin-right: auto;
         background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;  
+    }
+    .mobile-menu-content-wrap{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
     .mobile-menu-nav{
         display: flex;
@@ -84,6 +90,12 @@ margin-right: auto;
     .mobile-menu-nav-link:hover,
 .mobile-menu-nav-link:focus{
     color: var(--accent-color);
+}
+.mobile-menu-soc{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 56px;
 }
     /* ======= Mobile menu ======== */
     .menu{
