--- a/css/desktop.css
+++ b/css/desktop.css
@@ -142,9 +142,28 @@ align-items: flex-start;
 
 /* ======== PORTFOLIO ======= */
 .p
-ortfolio.section{
+.portfolio.section{
     padding-top: 96px;
     padding-bottom: 120px;
+}
+.example-list{
+row-gap: 40px;
+
+}
+.example-item{
+    flex-basis: calc((100% - 2 * 24px) / 3);
+}
+.filter{
+    display: flex;
+    
+    justify-content: center;
+    gap: var(--main-gap);
+    margin-bottom: 72px;
+
+}
+.filter-item{
+    width: 100%;
+    height: 48px;
 }
 
 }
