--- a/css/mobile.css
+++ b/css/mobile.css
@@ -91,11 +91,48 @@ margin-right: auto;
 .mobile-menu-nav-link:focus{
     color: var(--accent-color);
 }
+.mobile-menu-info-soc-wrap{
+   
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    
+}
+.mobile-menu-info{
+    margin-bottom: 48px;
+}
+ .mobile-menu-info-item.number{
+    font-weight: 600;
+font-size: 28px;
+line-height: 1.11;
+text-transform: capitalize;
+color: var(--brand-color);
+margin-bottom: 40px;
+
+} 
 .mobile-menu-soc{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    gap: 56px;
+
+}
+
+.mobile-menu-soc-item{
+    width: 40px;
+    height: 40px;
+    
+} 
+.mobile-menu-soc-link{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--brand-color);
+    align-items: center;
+    justify-content: center; 
+}
+.mobile-menu-soc-icon{
+    fill: var(--light-text-color);
 }
     /* ======= Mobile menu ======== */
     .menu{
