--- a/css/desktop.css
+++ b/css/desktop.css
@@ -4,6 +4,14 @@ width: 1158px;
 padding-left: 15px;
 padding-right: 15px;   
 } 
+/* ======= Header ====== */
+.mobile-menu-open-btn.js-open-menu{
+    display: none;
+}
+.mobile-menu.js-menu-container{
+    display: none;
+}
+
 .header-container{
     width: 100%;
     height: 76px;
