--- a/css/tablet.css
+++ b/css/tablet.css
@@ -22,15 +22,16 @@
 .container{
 width: 768px;    
 } 
-.mobile-menu-open{
+/* .mobile-menu-open{
     display: none;
-}
-.mobile-menu{
-    display: none;
-}
+} */
 .mobile-menu-open-btn.js-open-menu{
     display: none;
 }
+.mobile-menu.js-menu-container{
+    display: none;
+}
+
 
 .page-nav{
     display: flex;
@@ -133,7 +134,7 @@ padding-right: 92px; */
     width: 100%;
     display: flex;
     flex-direction: row;
-   flex-wrap: wrap;
+    flex-wrap: wrap;
     row-gap: 64px;
     column-gap: 24px;
 }
