--- a/css/tablet.css
+++ b/css/tablet.css
@@ -22,9 +22,9 @@
 .container{
 width: 768px;    
 } 
-/* .mobile-menu-open{
+.mobile-menu-open{
     display: none;
-} */
+} 
 .mobile-menu-open-btn.js-open-menu{
     display: none;
 }
