--- a/css/tablet.css
+++ b/css/tablet.css
@@ -25,10 +25,10 @@ width: 768px;
 .mobile-menu-open{
     display: none;
 } 
-.mobile-menu-open-btn.js-open-menu{
+.mobile-menu-open-btn{
     display: none;
 }
-.mobile-menu.js-menu-container{
+.mobile-menu{
     display: none;
 }
 
