--- a/css/mobile.css
+++ b/css/mobile.css
@@ -82,6 +82,8 @@ width: 428px;
         display: flex;
         flex-direction: column;
         gap: 40px;
+    }
+    .mobile-menu-nav-link{
         font-weight: 700;
         font-size: 36px;
         line-height: 1.1;
@@ -103,7 +105,7 @@ width: 428px;
 .mobile-menu-info{
     margin-bottom: 48px;
 }
-.mobile-menu-info-item.number{
+.mobile-menu-tel-link{
     font-weight: 600;
 font-size: 28px;
 line-height: 1.11;
@@ -111,6 +113,15 @@ text-transform: capitalize;
 color: var(--brand-color);
 margin-bottom: 40px;
 
+}
+.mobile-menu-email-link{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+    
+    
 } 
 .mobile-menu-soc{
     display: flex;
