--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@ body{
 }
 /* ===========components=========== */
 .section{
+    outline: 1px solid tomato;
     padding-top: 96px;
     padding-bottom: 96px;
 
@@ -101,8 +102,6 @@ margin-right: auto;
 }
 /* ==============Header========== */
 .page-header{
-    padding-top: 24px;
-    padding-bottom: 24px;
     border-bottom: 1px solid var(--secondary-text-color);
 }
 .header-container{
@@ -563,88 +562,6 @@ fill: var(--primary-background-color);
             color: var(--primary-title-color);
         
         }
-
-/*
-.filter{
-    display: flex;
-    justify-content: center;
-    gap: var(--main-gap);
-    margin-bottom: 72px;
-
-}
-.filter-btn{  
-border: none;
-color: var(--brand-color);
-background-color: var(--secondary-text-color);
-transition:color var(--tra), background-color var(--tra), box-shadow var(--tra) ;
-
-}
-.filter-btn:hover,
-.filter-btn:focus{
-    color: var(--primary-background-color);
-    background-color: var(--brand-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.example-list{
-    display: flex;
-    flex-wrap: wrap;
-row-gap: 48px;
-column-gap: var(--main-gap);
-}
-.example-item{
-    flex-basis: calc((100% - 2 * 24px) / 3);
-}
-.overlay-wrapper{
-position: relative;
-overflow: hidden;
-}
-.overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding-top: 40px;
-    padding-left: 32px;
-    padding-right: 32px;
-    overflow: auto;
-    transform: translate(0%, 100%);
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--secondary-background-color);
-    background-color: var(--brand-color);    
-}
-.example-link:hover .overlay,
-.example-link:focus .overlay{
-    transform: translate(0%, 0%);
-    transition: transform var(--tra);
-}
-
-.example-description{
-padding-top: 32px;
-padding-bottom: 32px;
-padding-left: 16px;
-border: 1px solid var(--secondary-text-color);
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-border-top: none;
-transition:border var(--tra), border-top var(--tra), box-shadow var(--tra) ;
-}
-
-
-.example-link:hover .example-description,
-.example-link:focus .example-description{
-    border: 0.5px solid var(--light-text-color);
-    border-top: none; 
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-} 
-
-.example-subtitle{
-    margin-bottom: 8px;
-    color: var(--primary-title-color);
-
-}  */
-
 /* =========== Modal Window =========== */
 .backdrop{
     position: fixed;
@@ -690,16 +607,11 @@ transition:background-color var(--tra), fill var(--tra) ;
 .modal-close-button:hover,
 .modal-close-button:focus{
     background-color: var(--accent-color);
-
 }   
 
 .modal-close-button:hover .modal-close-button-icon,
 .modal-close-button:focus .modal-close-button-icon{
 fill: var(--primary-background-color); 
-}
-.modal-close-button-icon{
-
-    
 }
 
 /* ========= modal-form ======================= */
@@ -714,9 +626,6 @@ color: var(--primary-title-color);
 margin-bottom: 16px;
 }
 
-.modal-form {
-
-}
 .modal-form-fields {
     margin-bottom: 8px;
 }
