--- a/css/tablet.css
+++ b/css/tablet.css
@@ -102,6 +102,7 @@ margin-left: auto;
 /* ==========hero======= */
 .hero{
     padding-bottom: 108px;
+    background-image:var(--hero-gra), url(../images/tablet/hero-bg-tablet.jpg);
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
 screen and (min-resolution: 192dpi) and (min-width: 768px),
